--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <center>
-<h3>TiMedia </h3><br>
-<!-- Begin Comments JavaScript Code --><script type="text/javascript" async>function ajaxpath_59122392394cd(url){return window.location.href == '' ? url : url.replace('&s=','&s=' + escape(window.location.href));}(function(){document.write('<div id="fcs_div_59122392394cd"><a title="free comment script" href="http://www.freecommentscript.com">&nbsp;&nbsp;<b>Free HTML User Comments</b>...</a></div>');fcs_59122392394cd=document.createElement('script');fcs_59122392394cd.type="text/javascript";fcs_59122392394cd.src=ajaxpath_59122392394cd((document.location.protocol=="https:"?"https:":"http:")+"//www.freecommentscript.com/GetComments2.php?p=59122392394cd&s=#!59122392394cd");setTimeout("document.getElementById('fcs_div_59122392394cd').appendChild(fcs_59122392394cd)",1);})();</script><noscript><div><a href="http://www.freecommentscript.com" title="free html user comment box">Free Comment Script</a></div></noscript><!-- End Comments JavaScript Code --></center>
+<h3>TiMedia </h3><br><!-- begin wwww.htmlcommentbox.com -->
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1494361969689");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<!-- end www.htmlcommentbox.com -->
 </body>
