--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <center>
-<h3>TiMedia</h3>
+<h3>TiMedia, For another forum like this visit coffee-media.github.io/-</h3>
  </center>
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
