--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <center>
 <h3>TiMedia,The best Calculator Forum(TI only)</h3>
- <h2>For another forum like this visit coffee-media.github.io/-</h2>
+ <h2>For another forum like this visit-</h2><a> href="https://coffee-media.github.io/-/">Click Here</a>
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
