--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <body>
 <center>
 <h3>TiMedia, The Best Calculator Forum (TI only)</h3>
- <h2>For another forum like this visit </h2><a>href="coffee-media.github.io/-">Click Here</a>
+ <h2>For another forum like this visit </h2>
+ <a>href="coffee-media.github.io/-">Click Here</a>
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/simple/skin.css" />
