--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <center>
-<h2>TiMedia, The Best Calculator Forum (TI only)</h2>
- <h3>For another forum like this visit CoffeeMedia!</h3>
- <a href="https://coffee-media.github.io/-/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
+<h3>TiMedia, The Best Calculator Forum (TI only)</h3>
+ <h2>For another forum like this visit CoffeeMedia!</h2>
+ <a href="https://coffee-media.github.io/-/"><button>Click here to visit CoffeeMedia!</button></a><br>
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
- <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=278&num=50&ts=1494365092215");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+ <img width=100px src=" https://images-na.ssl-images-amazon.com/images/I/61NWEby9vhL._SL1067_.jpg">
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=279&num=50&ts=1494365035982");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 </center>
  </body>
