--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <img width=100px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/A1p6HHnJWaL._SX466_.jpg">
+ <img width=100px src="http://imgur.com/Wf1RP">
  <h4></h4>
  <a href="http://www.ticalc.org/pub/83plus/">TI 84 Plus</a>
  <a href="http://www.ticalc.org/pub/nspire/"> | TI nspire CX CAS </a>
  <a href="http://ticalc.org/pub/85">| TI 85</a>
+ <a href="http://www.ticalc.org/pub/nspire/"> | TI nspire CM-C CAS </a>
  <!-- begin comment box -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
