--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <img width=100px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/A1p6HHnJWaL._SX466_.jpg">
- <img width=100px src="http://imgur.com/Wf1RP">
+ <img width=100px src="https://tiplanet.org/forum/gallery/image.php?album_id=15&image_id=273&view=no_count">
  <h4></h4>
  <a href="http://www.ticalc.org/pub/83plus/">TI 84 Plus</a>
  <a href="http://www.ticalc.org/pub/nspire/"> | TI nspire CX CAS </a>
