--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <center>
 <h2>TiMedia, The Best Calculator Forum (TI only)</h2>
  <h3>For another forum like this visit CoffeeMedia!</h3>
- <iframe src="ticalc.org">
- </iframe>
+ <iframe src="http://ticalc.org">
+ </iframe><br>
  <a href="https://coffee-media.github.io/-/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <img width=75px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
