--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <center>
-<h2>TiMedia, The Best Calculator Forum (TI only)</h2>
+<h2>TiMedia, The Best TI calculator Forum</h2>
  <h3>For another forum like this visit CoffeeMedia!</h3><br>
  <a href="https://coffee-media.github.io/-/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <img width=75px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/A1p6HHnJWaL._SX466_.jpg">
+ <h4></h4>
  <!-- begin comment box -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
