--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <img width=75px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/A1p6HHnJWaL._SX466_.jpg">
  <h4></h4>
- <a href="http://www.wolframalpha.com"><button>Click here for a useful calculator</button></a><br><br>
+ <a href="http://www.wolframalpha.com"><button>Click here for a useful calculator(WolframAlpha)</button></a><br><br>
  <!-- begin comment box -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
