--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 <!-- end comment box -->
 
 <script>document.getElementById('HCB_comment_box').style = "visibility: hidden;";</script>
+<h3>Content Protected</h3>
+<p>You must answer the following to see this content.</p>
 </center>
  </body>
