--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <script>
 document.getElementById('HCB_comment_box').style = "visibility: hidden;";
- function checkanswer();
+ function checkanswer()
  {
   if (document.getElementById('answer').value == "no") {
     document.getElementById('HCB_comment_box').style = "visibility: block;";
