--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <script>
  function checkanswer()
  {
-  if (document.getElementById('answer').value == "no" || document.getElementById('answer').value == "No" || document.getElementById('answer').value == "NO") {
+  if (document.getElementById('answer').value == "no" || document.getElementById('answer').value == "No" || document.getElementById('answer').value == "NO" || document.getElementById('answer').value= "nO") {
     document.getElementById('HCB_comment_box').style = "visibility: block;";
    document.getElementById('protected').style = "visibility: hidden;";
   }
