--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
+ background-image: url("https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg");
 <center>
 <h2>TiMedia, The Best TI calculator Forum</h2>
  <h3>For another forum like this visit CoffeeMedia!</h3><br>
