--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
- background-image: url("https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg");
-<center>
+<style>
+body {
+        background-image: url("https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg");
+} 
+ 
+</style>
 <h2>TiMedia, The Best TI calculator Forum</h2>
  <h3>For another forum like this visit CoffeeMedia!</h3><br>
  <a href="https://coffee-media.github.io/-/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
