--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <style>
 body {
-        background-image: url("https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg");
+        background-image: url("http://o.aolcdn.com/hss/storage/midas/a2374ed5b3f7895818bd9ce592ad052b/203800459/ti-84-plus-ce-bright-white.jpg");
 } 
  
 </style>
