--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
+<center>
 <h2>TiMedia, The Best TI calculator Forum</h2>
  <h3>For another forum like this visit CoffeeMedia!</h3><br>
  <a href="https://coffee-media.github.io/-/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
