--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <center>
 <h2>TiMedia, The Best TI calculator Forum</h2>
  <h3>For another forum like this visit CoffeeMedia!</h3><br>
- <a href="https://coffee-media.github.io/-/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
+ <a href="https://coffee-media.github.io/net/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <img width=75px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/A1p6HHnJWaL._SX466_.jpg">
