--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <center>
+<div id="content" style="visibility: hidden;">
 <h2>TiMedia, The Best TI calculator Forum</h2>
  <h3>For another forum like this visit CoffeeMedia!</h3><br>
  <a href="https://coffee-media.github.io/net/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
@@ -25,3 +26,20 @@
 
 <h3>Ratings</h3><!-- start Star Ratings -->
 <script data-sil-id='59137a45a43fd60015db245a'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/star-rating/59137a45a43fd60015db245a?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-star-rating sil-widget' id='sil-widget-59137a45a43fd60015db245a'<a href='https://bawkbox.com/install/star-rating'>Star Ratings is loading...</a></div>
+</div>
+
+<div id="access">
+ <h3>You need access to this page</h3>
+ <p>Solve to following.</p><br>
+ <img src="http://www.mathopolis.com/questions/latex/7/9/c5c978161edb1d801afc2a7e561ea91.gif"><br>
+ <input id="answer">
+ <button onclick="check()">See page.</button>
+
+<script>
+function check() {
+ if (document.getElementById('answer').value == "1/3[ln(3)+ln(v)-ln(4)-ln(pi)]") {
+   document.getElementById('access').style = "visibility: hidden;";
+   document.getElementById('content').style = "visibility: block;";
+ }
+}
+ </script>
