--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div id="access">
  <h3>You need access to this page</h3>
- <p>Solve to following.</p><br>
+ <p>Solve to following. (This is used to stop bots)</p><br>
  <img src="http://www.mathopolis.com/questions/latex/7/9/c5c978161edb1d801afc2a7e561ea91.gif"><br>
  <input id="answer">
  <button onclick="check()">See page.</button>
