--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  <img src="http://www.mathopolis.com/questions/latex/7/9/c5c978161edb1d801afc2a7e561ea91.gif"><br>
  <input id="answer">
  <button onclick="check()">See page.</button>
-
+</div>
 <script>
 function check() {
  if (document.getElementById('answer').value == "1/3[ln(3)+ln(v)-ln(4)-ln(pi)]") {
