--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
 <div id="access">
  <h3>You need access to this page</h3>
- <p>Solve to following. (This is used to stop bots)</p><br>
+ <p>Solve to following. (This is used to stop bots.)</p><br>
  <img src="http://www.mathopolis.com/questions/latex/7/9/c5c978161edb1d801afc2a7e561ea91.gif"><br>
  <input id="answer">
  <button onclick="check()">See page.</button>
 </div>
  
 <div id="content" style="visibility: hidden;">
-<h2>TiMedia, The Best TI calculator Forum</h2>
+<h1>TiMedia</h1>
  <h3>For another forum like this visit CoffeeMedia!</h3><br>
  <a href="https://coffee-media.github.io/net/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
