--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
  <p>Solve to following. (This is used to stop bots.)</p><br>
  <img src="http://www.mathopolis.com/questions/latex/7/9/c5c978161edb1d801afc2a7e561ea91.gif"><br>
  <input id="answer">
- <button onclick="check()">See page.</button>
+ <button onclick="check()">See page.</button><br>
+ <p>If you can't solve the following please enter the password below.</p><br>
+ <input id="password" type="password"><button onclick="checkPass()">See page.</button>
 </div>
  
 <div id="content" style="visibility: hidden;">
@@ -38,7 +40,14 @@
 </div>
 <script>
 function check() {
- if (document.getElementById('answer').value == "1/3[ln(3)+ln(v)-ln(4)-ln(pi)]") {
+ if (document.getElementById('answer').value == "/3[ln(3)+ln(v)-ln(4)-ln(pi)]") {
+   document.getElementById('access').style = "visibility: hidden;";
+   document.getElementById('content').style = "visibility: block;";
+ }
+}
+ 
+function checkPass() {
+ if (document.getElementById('password').value == "tier12345671") {
    document.getElementById('access').style = "visibility: hidden;";
    document.getElementById('content').style = "visibility: block;";
  }
