--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
  <p>Solve to following. (This is used to stop bots.)</p><br>
  <img src="http://www.mathopolis.com/questions/latex/7/9/c5c978161edb1d801afc2a7e561ea91.gif"><br>
  <input id="answer">
- <button onclick="check()">See page.</button><br>
- <p>If you can't solve the following please enter the password below.</p><br>
+ <button onclick="check()">See page.</button>
+ <p>If you can't solve the following please enter the password below.</p>
  <input id="password" type="password"><button onclick="checkPass()">See page.</button>
 </div>
  
