--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <center>
@@ -51,3 +53,4 @@ function checkPass() {
  }
 }
  </script>
+</html>
