--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 <script>
 function check() {
- if (document.getElementById('answer').value == "/3[ln(3)+ln(v)-ln(4)-ln(pi)]") {
+ if (document.getElementById('answer').value == "1/3[ln(3)+ln(v)-ln(4)-ln(pi)]") {
    document.getElementById('access').style = "visibility: hidden;";
    document.getElementById('content').style = "visibility: block;";
  }
