--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
  <p>Solve to following. (This is used to stop bots.)</p><br>
  <img src="http://www.mathopolis.com/questions/latex/7/9/c5c978161edb1d801afc2a7e561ea91.gif"><br>
  <input id="answer">
- <button onclick="check()">See page.</button>
- <p>OR login with your username and password</p><br>
+ <button onclick="check()">See page.</button><br>
+ <p>OR login with your username and password</p>
  <input id="username" type="text"><br>
  <input id="password" type="password"><br>
  <button onclick="checkPass()">Login!</button>
