--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ function check() {
 }
  
 function checkPass() {
- if (document.getElementById('username').value == "hymenopus" && document.getElementById('password').value == "tier") {
-   document.getElementById('access').style = "visibility: hidden;";
+ if (document.getElementById('username').value == "hymenopus" && document.getElementById('password').value == "tier" || document.getElementById('username').value == "henry" && document.getElementById('password').value == "port") {
+   document.getElementById('access').style = "visibility: hidden;"
    document.getElementById('content').style = "visibility: block;";
  }
 }
