--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <h2>TiMedia</h2>
 <div id="access">
  <h3>You need access to this page</h3>
+ <p>Authorized users only</p>
  <input id="username" type="text"><br>
  <input id="password" type="password"><br>
  <button onclick="checkPass()">Login!</button>
