--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <div id="access">
  <h3>You need access to this page</h3>
  <p>Authorized users only</p>
- <input id="username" type="text"><br>
- <input id="password" type="password"><br>
+ <input placeholder="Username" id="username" type="text"><br>
+ <input placeholder="Password" id="password" type="password"><br>
  <button onclick="checkPass()">Login!</button>
 </div>
  
