--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <h2>TiMedia</h2>
 <div id="access">
  <h3>You need access to this page</h3>
- <p>Authorized users only</p>
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
  <button onclick="checkPass()">Login!</button>
-</div>
+ <p>Don't have a login? Request one <a href="https://coffee-media.github.io/net"><b>here.</b></a>
+ </div>
  
 <div id="content" style="visibility: hidden;">
  <h3>For another forum like this visit CoffeeMedia!</h3><br>
