--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function check() {
 }
  
 function checkPass() {
- if (document.getElementById('username').value == "hymenopus" && document.getElementById('password').value == "tier" || document.getElementById('username').value == "henry" && document.getElementById('password').value == "port") {
+ if (document.getElementById('username').value == "hymenopus" && document.getElementById('password').value == "tier" || document.getElementById('username').value == "henry" && document.getElementById('password').value == "port" || document.getElementById('username').value == "jellyfishguy" && document.getElementById('password').value == "jellyfishes") {
    document.getElementById('access').style = "visibility: hidden;"
    document.getElementById('content').style = "visibility: block;";
  }
