--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 <center>
 <h2>TiMedia</h2>
-<div id="access" width="100px" style="border-style: solid; border-width: medium;">
+<div id="access" style="border-style: solid; border-width: 50px;">
  <h3>You need access to this page</h3>
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
