--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ function checkPass() {
 function changeUser() {
    document.getElementById('hcb_form_name').value = document.getElementById('username').value;
    document.getElementById('hcb_form_name').disabled = true;
+   document.getElementById('hcb_form_name').style = "visibility: hidden;";
 }
  </script>
 </html>
