--- a/index.html
+++ b/index.html
@@ -1,71 +1,33 @@
-<!DOCTYPE html>
-<title>TiMedia</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<body>
-<center>
-<h2>TiMedia</h2>
-<div id="access" style="border-style: solid; border-width: 10px;">
- <h3>You need access to this page</h3>
- <input placeholder="Username" id="username" type="text"><br>
- <input placeholder="Password" id="password" type="password"><br>
- <button onclick="checkPass()">Login!</button>
- <p>Don't have a login? Request one <a href="https://coffee-media.github.io/net"><b>here.</b></a>
- </div>
- 
-<div id="content" style="visibility: hidden;">
- <h3>For another forum like this visit CoffeeMedia!</h3><br>
- <a href="https://coffee-media.github.io/net/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
- <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
- <img width=75px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
- <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/A1p6HHnJWaL._SX466_.jpg">
- <img width=100px src="https://images-na.ssl-images-amazon.com/images/G/01/aplusautomation/vendorimages/0e74993e-8b04-4f99-a980-2437ad5c0728.jpg._CB283769908__SR150,300_.jpg">
- <img width=200px src="http://i258.photobucket.com/albums/hh259/kaspernova/84PCS-Pink.jpg">
- <h4></h4>
- <a href="http://www.wolframalpha.com"><button>Click Here for a Useful Calculator</button></a><br><br>
-<!-- start Feedback -->
-<script data-sil-id='591367bea43fd60015db241c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/feedback/591367bea43fd60015db241c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-feedback sil-widget' id='sil-widget-591367bea43fd60015db241c'<a href='https://bawkbox.com/install/feedback'>Feedback is loading...</a></div>
-<!-- end Feedback -->
-
- <!-- begin comment box -->
- <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
- <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=278&num=50&ts=1494365140122");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-<!-- end comment box -->
-</center>
- </body>
-
-</div>
+<h2>TiMedia is currently being worked on!</h2>
 <script>
-var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes"];
+function getJSONP(url, success) {
 
-function contains(a, obj) {
-    for (var i = 0; i < a.length; i++) {
-        if (a[i] === obj) {
-            return true;
-        }
-    }
-    return false;
-}
+    var ud = '_' + +new Date,
+        script = document.createElement('script'),
+        head = document.getElementsByTagName('head')[0] 
+               || document.documentElement;
 
-function check() {
- if (document.getElementById('answer').value == "1/3[ln(3)+ln(v)-ln(4)-ln(pi)]") {
-   document.getElementById('access').style = "visibility: hidden;";
-   document.getElementById('content').style = "visibility: block;";
- }
+    window[ud] = function(data) {
+        head.removeChild(script);
+        success && success(data);
+    };
+
+    script.src = url.replace('callback=?', 'callback=' + ud);
+    head.appendChild(script);
+
 }
  
-function checkPass() {
- if (contains(logins,document.getElementById('username').value + ':' + document.getElementById('password').value)) {
-   document.getElementById('access').style = "visibility: hidden;"
-   document.getElementById('content').style = "visibility: block;";
-   setInterval(changeUser(), 50);
- }
-}
+request = "https://limited.zone/login.php?username=" + document.getElementById('username').value + "&password=" + document.getElementById('password').value;
+
+ getJSONP(request, function(data){
+    console.log(data);
+});  
+
  
-function changeUser() {
-   document.getElementById('hcb_form_name').value = document.getElementById('username').value;
-   document.getElementById('hcb_form_name').disabled = true;
-   document.getElementById('hcb_form_name').style = "visibility: hidden;";
+ if (access == "1") {
+ document.write('');
+} else {
+ alert("Username or password is incorrect.");
 }
- </script>
+</script>
 </html>
