--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <h2>TiMedia is currently being worked on!</h2>
-<p>BUILD 0.0.0.1</p>
+<p>B 2.0</p>
 <input type="text" id="username">
 <input type="password" id="password">
-<button onclick="attemptLogin()"></button>
+<button onclick="attemptLogin()">Login!</button>
 <script>
 function getJSONP(url, success) {
 
