--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h2>TiMedia is currently being worked on!</h2>
-<p>B 2.0</p>
+<p>B 2.1</p>
 <input type="text" id="username">
 <input type="password" id="password">
 <button onclick="attemptLogin()">Login!</button>
@@ -21,7 +21,7 @@ function getJSONP(url, success) {
 
 }
 function attemptLogin() { 
-    request = "https://limited.zone/login.php?username=" + document.getElementById('username').value + "&password=" + document.getElementById('password').value;
+    request = "http://limited.zone/login.php?username=" + document.getElementById('username').value + "&password=" + document.getElementById('password').value;
  getJSONP(request, function(data){
     console.log(data.access);
 });  
