--- a/index.html
+++ b/index.html
@@ -1,30 +1,1 @@
-<h2>TiMedia is currently being worked on!</h2>
-<p>B 2.3</p>
-<input type="text" id="username">
-<input type="password" id="password">
-<button onclick="attemptLogin()">Login!</button>
-<script>
-function getJSONP(url, success) {
-
-    var ud = '_' + +new Date,
-        script = document.createElement('script'),
-        head = document.getElementsByTagName('head')[0] 
-               || document.documentElement;
-
-    window[ud] = function(data) {
-        head.removeChild(script);
-        success && success(data);
-    };
-
-    script.src = url.replace('callback=?', 'callback=' + ud);
-    head.appendChild(script);
-
-}
-function attemptLogin() { 
-    request = "http://limited.zone/login.php?username=" + document.getElementById('username').value + "&password=" + document.getElementById('password').value;
-    getJSONP(request, function(data){
-    console.log(data);
-}); 
-window.close();
-</script>
-</html>
+<script src="main.js"></script>
