--- a/index.html
+++ b/index.html
@@ -51,13 +51,10 @@
 
     <div class="container">
 
-      <h1>Hmmmmm</h1>
-      <p><strong>Looks like this site is still being developed.</strong></p>
-
-      <p>
-        Come back later or in a few days
-        and everything should be done.
-      </p>
+      <h1>TiMedia</h1>
+      <p><strong>A global TI forum.</strong></p>
+     <input type="text"><br>
+     <input type="password">
     </div>
   </body>
 </html>
