--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <h3>You need access to this page</h3>
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
- <button onclick="checkPass()">Login!</button>
+ <button class="base btn" onclick="checkPass()">Login!</button>
  <p>Don't have a login? Request one <a href="https://coffee-media.github.io/net"><b>here.</b></a>
  </div>
  
