--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <center>
-<h2>TiMedia</h2>
+<div class="top">
+ <h2>TiMedia</h2>
+ </div>
 <div id="access" style="border-style: solid; border-width: 10px;">
  <h3>You need access to this page</h3>
  <input placeholder="Username" id="username" type="text"><br>
