--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <body>
 <center>
 <div class="top">
- <h2>TiMedia</h2>
+ <h2 style="color:white;">TiMedia</h2>
  </div>
+<br><br><br>
 <div id="access" style="border-style: solid; border-width: 10px;">
  <h3>You need access to this page</h3>
  <input placeholder="Username" id="username" type="text"><br>
