--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br><br>
-<div id="access" style="border-style: solid; border-width: 10px;">
+<div id="access">
  <h3>You need access to this page</h3>
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
