--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 </div>
 <script>
-var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes"];
+var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes" , "Neil:cat];
 function contains(a, obj) {
 
   for (var i = 0; i < a.length; i++) {
