--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  
 <div id="content" style="visibility: hidden;">
  <h3>This is a TI forum, not social media</h3>
- <h3>For Social Media(and non TI related disscussions) visit CoffeeMedia!</h3><br>
+ <h3>For Social Media(and non TI related disscussions) visit CoffeeMedia!(The admins regularly post there too)</h3><br>
  <a href="https://coffee-media.github.io/net/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <img width=75px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
