--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ function checkPass() {
  }
 }
 
- if (getCookie("login") == true) {
+ if (getCookie("login") == "true") {
      document.getElementById('access').style = "visibility: hidden;";
      document.getElementById('content').style = "visibility: block;";
  }
