--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
  </div>
  
 <div id="content" style="visibility: hidden;">
+ <h3>Get the new CoffeeMedia extension for Chrome now!</h3>
+ <p>• Fills out your name for you.</p>
+ <p>• Fills out the math problem for you.</p>
+ <p>• Easy to install</p>
+ <p>Click <a href="www.mediafire.com/file/duljwzbj5hnh4d6/CoffeeMedia_.zip"><b>here</b></a> to download!</p><br>
  <h3>This is a TI forum, not social media</h3>
  <h3>For Social Media(and non TI related disscussions) visit CoffeeMedia!(The admins regularly post there too)</h3><br>
  <a href="https://coffee-media.github.io/net/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
