--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <h3>Get the new CoffeeMedia extension for Chrome now!</h3>
  <p>• Fills out your name for you.</p>
  <p>• Fills out the math problem for you.</p>
- <p>• Easy to install</p>
+ <p>• Easy to install.</p>
  <p>Click <a href="https://mediafire.com/file/duljwzbj5hnh4d6/CoffeeMedia_.zip"><b>here</b></a> to download!</p><br>
  </div>
  <h3>This is a TI forum, not social media</h3>
