--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
  <p>• Fills out the math problem for you.</p>
  <p>• Easy to install.</p>
  <p>Click <a href="https://mediafire.com/file/duljwzbj5hnh4d6/CoffeeMedia_.zip"><b>here</b></a> to download!</p><br>
+ </div><br>
+<div id="ad" style="border: 4px solid;border-radius: 8px;">
+ <h3>Latest updates/news</h3>
+ <p>May 11th, 2017: Major updates, added login system.</p>
+ <p>May 11th, 2017: Removed CAPTCHA.</p>
+ <p>May 10th, 2017: Added CAPTCHA.</p>
  </div>
  <h3>This is a TI forum, not social media</h3>
  <h3>For Social Media(and non TI related disscussions) visit CoffeeMedia!(The admins regularly post there too)</h3><br>
