--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  </div>
  
 <div id="content" style="visibility: hidden;">
- <button href="#HCB_comment_box" class="base btn2">Click here to scroll down to the comments!</button><br>
+ <a href="#HCB_comment_box"><button class="base btn2">Click here to scroll down to the comments!</button></a><br>
  <div id="ad" style="border: 4px solid;border-radius: 8px;">
  <h3>Get the new CoffeeMedia extension for Chrome now!</h3>
  <p>• Fills out your name for you.</p>
