--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 </div>
 <script>
-var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes"];
+var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty"];
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
